control-plane/gateway07/gateway-api-0.7.1-custom/examples/standard/multicluster/httproute-gamma.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

#$ Used in:
#$ - geps/gep-1748.md
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: store
spec:
  parentRefs:
  - group: multicluster.x-k8s.io
    kind: ServiceImport
    name: store
  rules:
  - matches:
    - path:
        value: "/cart"
    backendRefs:
    - group: multicluster.x-k8s.io
      kind: ServiceImport
      name: cart
